force-app/main/default/objects/COMM_DelayedRefund__c/COMM_DelayedRefund__c.object-meta.xml
<CustomObject>
    <description>Refunds that need to be delayed.
This is required because banking system does not allow partial refunds on the same day a payment was captured</description>
    <label>Delayed Refund</label>
    <nameField>
        <displayFormat>DR-{0000000000}</displayFormat>
        <label>Delayed Refund Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delayed Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>