force-app/main/default/objects/COMM_DelayedRefund__c/fields/COMM_CreditMemo__c.field-meta.xml
<CustomField>
    <fullName>COMM_CreditMemo__c</fullName>
    <label>Credit Memo</label>
    <referenceTo>CreditMemo</referenceTo>
    <relationshipName>Delayed_Partial_Refunds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>