force-app/main/default/objects/COMM_DelayedRefund__c/fields/COMM_OrderSummary__c.field-meta.xml
<CustomField>
    <fullName>COMM_OrderSummary__c</fullName>
    <label>Order Summary</label>
    <referenceTo>OrderSummary</referenceTo>
    <relationshipName>Delayed_Partial_Refunds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>