force-app/main/default/objects/COMM_DelayedRefund__c/fields/COMM_ProcessStatus__c.field-meta.xml
<CustomField>
    <fullName>COMM_ProcessStatus__c</fullName>
    <label>Process Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Processed</fullName>
                <default>true</default>
                <label>Not Processed</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>