force-app/main/default/objects/COMM_DelayedRefund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COMM_ProcessStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>COMM_OrderSummary__c</columns>
    <columns>COMM_CreditMemo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>