force-app/main/default/objects/COMM_DelayedRefund__c/listViews/COMM_DelayedRefundPendingProcess.listView-meta.xml
<ListView>
    <fullName>COMM_DelayedRefundPendingProcess</fullName>
    <columns>NAME</columns>
    <columns>COMM_ProcessStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>COMM_OrderSummary__c</columns>
    <columns>COMM_CreditMemo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>COMM_ProcessStatus__c</field>
        <operation>equals</operation>
        <value>Not Processed</value>
    </filters>
    <label>Pending Process</label>
</ListView>